--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>serialization</module>
         <module>jms</module>
+        <module>functional-interface</module>
     </modules>
 
     <build>
@@ -26,5 +27,12 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+    </dependencies>
 </project>
